--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   /* General Styles */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
   }
 
   /* Header Styles */
